fix for dark mode

--- a/src/assets/css/partials/components/multi-select.scss
+++ b/src/assets/css/partials/components/multi-select.scss
@@ -49,6 +49,7 @@
         line-height: inherit;
         min-width: 15rem;
         width: 100%;
+        background-color: var(--color-white);
 
         &:focus-visible {
             outline: none;
